--- a/technologyInovation.html
+++ b/technologyInovation.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/dropdowns-enhancement.css">
@@ -12,163 +13,87 @@
 </head>
 <body>
 <div id="wrap">
-<nav id="myNavbarIndex" class="navbar navbar-default" role="navigation" style="">
-    <!-- Brand and toggle get grouped for better mobile display -->
+    <div id="navbarHolder">
+
+    </div>
+
     <div class="container myFont">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbarCollapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="./index.html"><img style="height:35px; display:inline-block; margin-top:-7px" src="images/logo.png">
-                DDNT</a>
-        </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse navbar-right" id="navbarCollapse">
-            <ul class="nav navbar-nav text-center col-xs-12">
-                <li id="testID" class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown">About DDNT <b class="fa fa-chevron-down"></b></a>
-                    <ul class="dropdown-menu bullet pull-center">
-                        <li><a href="./aboutDDNT.html">Information</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown">Global Partnerships <b class="fa fa-chevron-down"></b></a>
-                    <ul class="dropdown-menu bullet pull-center">
-                        <li><a href="./globalPartnerships.html#infrastructure">Infrastructure</a></li>
-                        <li><a href="./globalPartnerships.html#finance">Finance</a></li>
-                        <li><a href="./globalPartnerships.html#utilities">Utilities</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown">ISO &amp; Quality Systems <b class="fa fa-chevron-down"></b></a>
-                    <ul class="dropdown-menu bullet pull-center">
-                        <li><a href="./qualitySystems.html#experience">Experience</a></li>
-                        <li><a href="./qualitySystems.html#mcritical">Mission-Critical</a></li>
-                        <li><a href="./qualitySystems.html#compilance">Compilance</a></li>
-
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown">Strategy &amp; Data <b class="fa fa-chevron-down"></b></a>
-                    <ul class="dropdown-menu bullet pull-center">
-                        <li><a href="strategyData.html#tda">Topological Data Analysis</a></li>
-                        <li><a href="strategyData.html#methodology">Advanced methodology</a></li>
-                        <li><a href="strategyData.html#dmaking">Data-driven decision making</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown"> Technology &amp; Inovation <b class="fa fa-chevron-down"></b></a>
-                    <ul class="dropdown-menu bullet pull-center">
-                        <li><a href="technologyInovation.html#creating">Creating &amp; safeguarding your ip</a></li>
-                        <li><a href="technologyInovation.html#technoDev">Technological development</a></li>
-                        <li><a href="technologyInovation.html#research">Cutting-edge research</a></li>
-                        <li><a href="technologyInovation.html#safeguarding">Safeguarding ip</a></li>
-                    </ul>
-                </li>
-
-
-
-
-            </ul>
-        </div>
-    </div>
-</nav>
-
-<div class="container myFont">
-    <div class="row">
-
-        <div class="col-md-12 ">
-
-            <img src="images/73510272.jpg" alt="test" class="sectionPicture">
-
-            <div class="carousel-caption">
-                <h1 class="text-center">TECHNOLOGY &amp; INOVATION</h1>
-                <div>Turnkey solutions for any organisational problem</div>
-            </div>
-
-        </div>
-
-
-    </div>
-</div>
-<br/>
-<br/>
-<div class="container myFont">
-    <div class="row">
-        <div class="col-sm-5 col-sm-offset-1">
-            <h2 id="creating" class="text-center">CREATING &amp; SAFEGUARDING YOUR IP</h2>
-            <div>
-                DDNT has been involved in the invention of new technology for
-                over a decade, applying the breadth of scientific and technical
-                knowledge of our team to problems ranging from microfluidics to
-                power generation.
-            </div>
-        </div>
-        <div class="col-sm-5">
-            <h2 id="technoDev" class="text-center">TECHNOLOGICAL DEVELOPMENT</h2>
-            <div>
-                Members of the DDNT team have been involved in the research,
-                development, and IP protection and licensing aspects of cuttingedge
-                technologies for over 30 years. Our staff includes a number
-                of academic ‘firsts‘.
-            </div>
-        </div>
-    </div>
-
-    <div class="row top-buffer">
-        <div class="col-sm-5 col-sm-offset-1">
-        <h2 id="research" class="text-center">CUTTING-EDGE RESEARCH</h2>
-            <div>
-            We have worked on diverse projects ranging from the design and
-            microfabrication of a novel medical device, together with an IP
-            strategy, to the design and manufacture of a novel clean energy
-            technology for utility-scale power generation. DDNT engineers
-            have extensive academic experience and have worked with some
-            of the world‘s leading engineering consultancies.
-            </div>
-        </div>
-
-        <div class="col-sm-5">
-            <h2 class="text-center" id="safeguarding">SAFEGUARDING IP</h2>
-            <div>
-                Our team specializes in ‘turnkey innovation‘–we are typically
-                involved at the earliest stage of a new technology and assist in
-                its ongoing development while formulating an IP strategy that
-                ensures maximum protection and eventual value.
-            </div>
-
-        </div>
-    </div>
-
-</div>
-</div>
-<div id="footer">
-    <div class="container">
         <div class="row">
-            <div class="col-sm-2 col-md-offset-1">
-                <div><span class="fa fa-phone"></span> + 61 2 9292 5888</div>
+
+            <div class="col-md-12 ">
+
+                <img src="images/73510272.jpg" alt="test" class="sectionPicture">
+
+                <div class="carousel-caption">
+                    <h1 class="text-center">TECHNOLOGY &amp; INOVATION</h1>
+                    <div>Turnkey solutions for any organisational problem</div>
+                </div>
+
             </div>
-            <div class="col-sm-3">
-                <div><span class="fa fa-external-link-square"></span> <a href="#">www.ddntconsultants.com</a></div>
-            </div>
-            <div class="col-sm-3">
-                <div><span class="fa fa-envelope"></span> info@ddconsultants.com</div>
-            </div>
-            <div class="col-sm-2">
-                <div><span class="fa fa-map-marker"></span> L1, 71 York Street
-                    Sydney NSW 2000</div>
-            </div>
+
+
         </div>
     </div>
+    <br/>
+    <br/>
+    <div class="container myFont">
+        <div class="row">
+            <div class="col-sm-5 col-sm-offset-1">
+                <h2 id="creating" class="text-center">CREATING &amp; SAFEGUARDING YOUR IP</h2>
+                <div>
+                    DDNT has been involved in the invention of new technology for
+                    over a decade, applying the breadth of scientific and technical
+                    knowledge of our team to problems ranging from microfluidics to
+                    power generation.
+                </div>
+            </div>
+            <div class="col-sm-5">
+                <h2 id="technoDev" class="text-center">TECHNOLOGICAL DEVELOPMENT</h2>
+                <div>
+                    Members of the DDNT team have been involved in the research,
+                    development, and IP protection and licensing aspects of cuttingedge
+                    technologies for over 30 years. Our staff includes a number
+                    of academic ‘firsts‘.
+                </div>
+            </div>
+        </div>
+
+        <div class="row top-buffer">
+            <div class="col-sm-5 col-sm-offset-1">
+                <h2 id="research" class="text-center">CUTTING-EDGE RESEARCH</h2>
+                <div>
+                    We have worked on diverse projects ranging from the design and
+                    microfabrication of a novel medical device, together with an IP
+                    strategy, to the design and manufacture of a novel clean energy
+                    technology for utility-scale power generation. DDNT engineers
+                    have extensive academic experience and have worked with some
+                    of the world‘s leading engineering consultancies.
+                </div>
+            </div>
+
+            <div class="col-sm-5">
+                <h2 class="text-center" id="safeguarding">SAFEGUARDING IP</h2>
+                <div>
+                    Our team specializes in ‘turnkey innovation‘–we are typically
+                    involved at the earliest stage of a new technology and assist in
+                    its ongoing development while formulating an IP strategy that
+                    ensures maximum protection and eventual value.
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+</div>
+<div id="footerHolder">
+
 </div>
 
 
 <script src="js/jquery.min.js"></script>
+<script src="js/page.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/dropdowns-enhancement.js"></script>
-<script src="js/page.js"></script>
+
 </body>
 </html>
