--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-   <link rel="stylesheet" type="text/css" href="css/dropdowns-enhancement.css">
-   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/dropdowns-enhancement.css">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/page.css">
 
     <meta charset="UTF-8">
@@ -13,153 +15,65 @@
 </head>
 <body>
 <div id="wrap">
-<nav id="myNavbarIndex" class="navbar navbar-default" role="navigation" style="">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="container myFont">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbarCollapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="./index.html"><img style="height:35px; display:inline-block; margin-top:-7px" src="images/logo.png">
-            DDNT</a>
-        </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse navbar-right" id="navbarCollapse">
-            <ul class="nav navbar-nav text-center">
-                <li id="testID" class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown">About DDNT <b class="fa fa-chevron-down"></b></a>
-                    <ul class="dropdown-menu bullet pull-center">
-                        <li><a href="./aboutDDNT.html">Information</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown">Global Partnerships <b class="fa fa-chevron-down"></b></a>
-                    <ul class="dropdown-menu bullet pull-center">
-                        <li><a href="./globalPartnerships.html#infrastructure">Infrastructure</a></li>
-                        <li><a href="./globalPartnerships.html#finance">Finance</a></li>
-                        <li><a href="./globalPartnerships.html#utilities">Utilities</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown">ISO &amp; Quality Systems <b class="fa fa-chevron-down"></b></a>
-                    <ul class="dropdown-menu bullet pull-center">
-                        <li><a href="./qualitySystems.html#experience">Experience</a></li>
-                        <li><a href="./qualitySystems.html#mcritical">Mission-Critical</a></li>
-                        <li><a href="./qualitySystems.html#compilance">Compilance</a></li>
-
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown">Strategy &amp; Data <b class="fa fa-chevron-down"></b></a>
-                    <ul class="dropdown-menu bullet pull-center">
-                        <li><a href="strategyData.html#tda">Topological Data Analysis</a></li>
-                        <li><a href="strategyData.html#methodology">Advanced methodology</a></li>
-                        <li><a href="strategyData.html#dmaking">Data-driven decision making</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown"> Technology &amp; Inovation <b class="fa fa-chevron-down"></b></a>
-                    <ul class="dropdown-menu bullet pull-center">
-                        <li><a href="technologyInovation.html#creating">Creating &amp; safeguarding your ip</a></li>
-                        <li><a href="technologyInovation.html#technoDev">Technological development</a></li>
-                        <li><a href="technologyInovation.html#research">Cutting-edge research</a></li>
-                        <li><a href="technologyInovation.html#safeguarding">Safeguarding ip</a></li>
-                    </ul>
-                </li>
-
-
-
-
-            </ul>
-        </div>
-    </div>
-</nav>
+    <div id="navbarHolder"></div>
 
     <!--Carousel -->
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img class="first-slide" src="images/53445969.jpg" alt="First slide">
-            <div class="container">
-                <div class="carousel-caption">
-                    <h1>Example headline.</h1>
-                    <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
-                </div>
-            </div>
-        </div>
-        <div class="item">
-            <img class="second-slide" src="images/73510272.jpg" alt="Second slide">
-            <div class="container">
-                <div class="carousel-caption">
-                    <h1>Another example headline.</h1>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-                </div>
-            </div>
-        </div>
-        <div class="item">
-            <img class="third-slide" src="images/60793587.jpg" alt="Third slide">
-            <div class="container">
-                <div class="carousel-caption">
-                    <h1>One more for good measure.</h1>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div><!-- /.carousel -->
-</div>
-
-<div id="footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-2 col-md-offset-1">
-                <div><span class="fa fa-phone"></span> + 61 2 9292 5888</div>
-            </div>
-            <div class="col-sm-3">
-                <div><span class="fa fa-envelope"></span> info@ddconsultants.com</div>
-            </div>
-            <div class="col-sm-2">
-                <div><span class="fa fa-map-marker"></span> L1, 71 York Street
-                    Sydney NSW 2000</div>
-            </div>
-            <div class="col-sm-2 social">
-                  <div class="col-sm-4">
-                  <a href="https://facebook.com"> <span class="fa fa-facebook"></span> </a>
-                  </div>
-                    <div class="col-sm-4">
-                    <a href="https://twitter.com">  <span class="fa fa-twitter"></span> </a>
-                    </div>
-                    <div class="col-sm-4">
-                    <a href="https://linkedin.com"> <span class="fa fa-linkedin"></span> </a>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+            <div class="item active">
+                <img class="first-slide" src="images/53445969.jpg" alt="First slide">
+                <div class="container">
+                    <div class="carousel-caption">
+                        <h1>Example headline.</h1>
+                        <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
+                        <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
                     </div>
                 </div>
-
+            </div>
+            <div class="item">
+                <img class="second-slide" src="images/73510272.jpg" alt="Second slide">
+                <div class="container">
+                    <div class="carousel-caption">
+                        <h1>Another example headline.</h1>
+                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                        <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img class="third-slide" src="images/60793587.jpg" alt="Third slide">
+                <div class="container">
+                    <div class="carousel-caption">
+                        <h1>One more for good measure.</h1>
+                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                        <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div><!-- /.carousel -->
 </div>
+
+<div id="footerHolder"></div>
+
 <script src="js/jquery.min.js"></script>
+<script src="js/page.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/dropdowns-enhancement.js"></script>
-<script src="js/page.js"></script>
+
 </body>
 </html>
