--- a/strategyData.html
+++ b/strategyData.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/dropdowns-enhancement.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
@@ -12,167 +14,91 @@
 </head>
 <body>
 <div id="wrap">
-<nav id="myNavbarIndex" class="navbar navbar-default" role="navigation" style="">
-    <!-- Brand and toggle get grouped for better mobile display -->
+    <div id="navbarHolder">
+
+    </div>
+
     <div class="container myFont">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbarCollapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="./index.html"><img style="height:35px; display:inline-block; margin-top:-7px" src="images/logo.png">
-                DDNT</a>
-        </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse navbar-right" id="navbarCollapse">
-            <ul class="nav navbar-nav text-center col-xs-12">
-                <li id="testID" class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown">About DDNT <b class="fa fa-chevron-down"></b></a>
-                    <ul class="dropdown-menu bullet pull-center">
-                        <li><a href="./aboutDDNT.html">Information</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown">Global Partnerships <b class="fa fa-chevron-down"></b></a>
-                    <ul class="dropdown-menu bullet pull-center">
-                        <li><a href="./globalPartnerships.html#infrastructure">Infrastructure</a></li>
-                        <li><a href="./globalPartnerships.html#finance">Finance</a></li>
-                        <li><a href="./globalPartnerships.html#utilities">Utilities</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown">ISO &amp; Quality Systems <b class="fa fa-chevron-down"></b></a>
-                    <ul class="dropdown-menu bullet pull-center">
-                        <li><a href="./qualitySystems.html#experience">Experience</a></li>
-                        <li><a href="./qualitySystems.html#mcritical">Mission-Critical</a></li>
-                        <li><a href="./qualitySystems.html#compilance">Compilance</a></li>
-
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown">Strategy &amp; Data <b class="fa fa-chevron-down"></b></a>
-                    <ul class="dropdown-menu bullet pull-center">
-                        <li><a href="strategyData.html#tda">Topological Data Analysis</a></li>
-                        <li><a href="strategyData.html#methodology">Advanced methodology</a></li>
-                        <li><a href="strategyData.html#dmaking">Data-driven decision making</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown"> Technology &amp; Inovation <b class="fa fa-chevron-down"></b></a>
-                    <ul class="dropdown-menu bullet pull-center">
-                        <li><a href="technologyInovation.html#creating">Creating &amp; safeguarding your ip</a></li>
-                        <li><a href="technologyInovation.html#technoDev">Technological development</a></li>
-                        <li><a href="technologyInovation.html#research">Cutting-edge research</a></li>
-                        <li><a href="technologyInovation.html#safeguarding">Safeguarding ip</a></li>
-                    </ul>
-                </li>
-
-
-
-
-            </ul>
-        </div>
-    </div>
-</nav>
-
-<div class="container myFont">
-    <div class="row">
-
-        <div class="col-md-12 ">
-
-            <img src="images/3934199.jpg" alt="test" class="sectionPicture">
-
-            <div class="carousel-caption">
-                <h1 class="text-center">STRATEGY AND DATA</h1>
-                <div>A better way to make decisions.</div>
-            </div>
-
-        </div>
-
-
-    </div>
-</div>
-<br/>
-<br/>
-<div class="container myFont">
-    <div class="row">
-        <div class="col-sm-offset-1 col-sm-5">
-            <div class="col-sm-12">
-                <h2 id="tda" class="text-center">TOPOLOGICAL DATA ANALYSIS</h2>
-                <div>
-                    Conducting topological data analysis on large, distributed data
-                    sets – such as sensors on a production line, or populations of
-                    customers – finds useful information in places most analyses
-                    cannot effectively look. More traditional analysis can then be
-                    deployed to exactly compare the cost and benefit of potential
-                    actions.
-                </div>
-            </div>
-            <div class="col-sm-12">
-                <h2 id="methodology" class="text-center">ADVANCED METHODOLOGY</h2>
-                <div>
-                    DDNT leverages the most cutting–edge analytic methods
-                    available to examine large and small datasets. Our focus is always
-                    on using analysis to provide outsized returns on investment. Some
-                    of these include force-multiplying expenses to produce a greater
-                    effective outcome, or finding new potential sources of profit or
-                    cost savings in a business.
-                </div>
-            </div>
-
-            <div class="col-sm-12">
-                <h2 id="dmaking" class="text-center">DATA-DRIVEN DECISION MAKING</h2>
-                <div>
-                    Combining advanced data analytics with our strategy consulting
-                    team enables forward-thinking decisions to be effectively taken
-                    as well. DDNT has effectively employed this integrated technique
-                    for analyses ranging from internal competitiveness assessments to
-                    large, public M & A deals.
-                </div>
-            </div>
-
-        </div>
-        <div class="col-sm-4 col-sm-offset-1">
-            <br/>
-            <div class="largeBlueBlock">
-                Our strategy and
-                data consulting
-                arm is focused
-                on using a deep
-                understanding
-                of available data
-                to empower
-                business decisions.
-            </div>
-        </div>
-    </div>
-</div>
-</div>
-<div id="footer">
-    <div class="container">
         <div class="row">
-            <div class="col-sm-2 col-md-offset-1">
-                <div><span class="fa fa-phone"></span> + 61 2 9292 5888</div>
+
+            <div class="col-md-12 ">
+
+                <img src="images/3934199.jpg" alt="test" class="sectionPicture">
+
+                <div class="carousel-caption">
+                    <h1 class="text-center">STRATEGY AND DATA</h1>
+                    <div>A better way to make decisions.</div>
+                </div>
+
             </div>
-            <div class="col-sm-3">
-                <div><span class="fa fa-external-link-square"></span> <a href="#">www.ddntconsultants.com</a></div>
+
+
+        </div>
+    </div>
+    <br/>
+    <br/>
+    <div class="container myFont">
+        <div class="row">
+            <div class="col-sm-offset-1 col-sm-5">
+                <div class="col-sm-12">
+                    <h2 id="tda" class="text-center">TOPOLOGICAL DATA ANALYSIS</h2>
+                    <div>
+                        Conducting topological data analysis on large, distributed data
+                        sets – such as sensors on a production line, or populations of
+                        customers – finds useful information in places most analyses
+                        cannot effectively look. More traditional analysis can then be
+                        deployed to exactly compare the cost and benefit of potential
+                        actions.
+                    </div>
+                </div>
+                <div class="col-sm-12">
+                    <h2 id="methodology" class="text-center">ADVANCED METHODOLOGY</h2>
+                    <div>
+                        DDNT leverages the most cutting–edge analytic methods
+                        available to examine large and small datasets. Our focus is always
+                        on using analysis to provide outsized returns on investment. Some
+                        of these include force-multiplying expenses to produce a greater
+                        effective outcome, or finding new potential sources of profit or
+                        cost savings in a business.
+                    </div>
+                </div>
+
+                <div class="col-sm-12">
+                    <h2 id="dmaking" class="text-center">DATA-DRIVEN DECISION MAKING</h2>
+                    <div>
+                        Combining advanced data analytics with our strategy consulting
+                        team enables forward-thinking decisions to be effectively taken
+                        as well. DDNT has effectively employed this integrated technique
+                        for analyses ranging from internal competitiveness assessments to
+                        large, public M & A deals.
+                    </div>
+                </div>
+
             </div>
-            <div class="col-sm-3">
-                <div><span class="fa fa-envelope"></span> info@ddconsultants.com</div>
-            </div>
-            <div class="col-sm-2">
-                <div><span class="fa fa-map-marker"></span> L1, 71 York Street
-                    Sydney NSW 2000</div>
+            <div class="col-sm-4 col-sm-offset-1">
+                <br/>
+                <div class="largeBlueBlock">
+                    Our strategy and
+                    data consulting
+                    arm is focused
+                    on using a deep
+                    understanding
+                    of available data
+                    to empower
+                    business decisions.
+                </div>
             </div>
         </div>
     </div>
+</div>
+<div id="footerHolder">
+
 </div>
 
 <script src="js/jquery.min.js"></script>
+<script src="js/page.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/dropdowns-enhancement.js"></script>
-<script src="js/page.js"></script>
+
 </body>
 </html>
