--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,42 @@
 <div id="footer">
     <div class="container">
         <div class="row">
-            <div class="col-sm-2 col-md-offset-1">
+
+            <div class="col-sm-2 col-sm-offset-3">
+            <ul class="list-unstyled">
+                <li><a href="./aboutDDNT.html">About DDNT</a></li>
+                <li><a href="./globalPartnerships.html">Global Partnerships</a></li>
+                <li><a href="./qualitySystems.html">ISO &amp; Quality Systems</a></li>
+            </ul>
+            </div>
+            <div class="col-sm-2">
+                <ul class="list-unstyled">
+                <li><a href="./strategyData.html">Strategy &amp; Data</a></li>
+                <li><a href="./technologyInovation.html">Technology &amp; Inovation</a></li>
+                </ul>
+            </div>
+            <div class="col-sm-2">
+               <div class="blueBlock">
+                   <h2>SomeText</h2>
+                   <div>Some description here.</div>
+               </div>
+            </div>
+
+        </div>
+
+        <div class="row">
+            <div class="col-sm-6 col-sm-offset-3 text-center">
+                <small>Copyright &copy; 2016 DDNT. All Rights Reserved.</small>
+                <a href="https://facebook.com"> <span class="fa fa-facebook"></span> </a>
+                <a href="https://twitter.com">  <span class="fa fa-twitter"></span> </a>
+                <a href="https://linkedin.com"> <span class="fa fa-linkedin"></span> </a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- old footer
+    <div class="col-sm-2 col-md-offset-1">
                 <div><span class="fa fa-phone"></span> + 61 2 9292 5888</div>
             </div>
             <div class="col-sm-3">
@@ -22,7 +57,4 @@
                     <a href="https://linkedin.com"> <span class="fa fa-linkedin"></span> </a>
                 </div>
             </div>
-
-        </div>
-    </div>
-</div>
+ -->
