--- a/footer.html
+++ b/footer.html
@@ -27,9 +27,9 @@
         <div class="row">
             <div class="col-sm-6 col-sm-offset-3 text-center">
                 <small>Copyright &copy; 2016 DDNT. All Rights Reserved.</small>
-                <a href="https://facebook.com"> <span class="fa fa-facebook"></span> </a>
-                <a href="https://twitter.com">  <span class="fa fa-twitter"></span> </a>
-                <a href="https://linkedin.com"> <span class="fa fa-linkedin"></span> </a>
+                <a href="https://facebook.com"> <span class="fa social fa-facebook"></span> </a>
+                <a href="https://twitter.com">  <span class="fa social fa-twitter"></span> </a>
+                <a href="https://linkedin.com"> <span class="fa social fa-linkedin"></span> </a>
             </div>
         </div>
     </div>
