--- a/globalPartnerships.html
+++ b/globalPartnerships.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/page.css">
 
     <meta charset="UTF-8">
-    <title>Test</title>
+    <title>DDNT</title>
 </head>
 <body>
 <div id="wrap">
@@ -56,7 +56,7 @@
                 </div>
             </div>
             <div class="col-sm-5">
-                <img class="img-responsive" src="images/3934199.jpg">
+                <img class="img-responsive" src="images/73980958.jpg">
             </div>
         </div>
 
