--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/page.css">
 
     <meta charset="UTF-8">
-    <title>Test</title>
+    <title>DDNT</title>
 </head>
 <body>
 <div id="wrap">
@@ -30,9 +30,8 @@
                 <img class="first-slide" src="images/53445969.jpg" alt="First slide">
                 <div class="container">
                     <div class="carousel-caption">
-                        <h1>Example headline.</h1>
-                        <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
-                        <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+                        <h1>LONG TERM GLOBAL PARTNERSHIPS.</h1>
+                        <p>We believe in the power of data-driven decisions.</p>
                     </div>
                 </div>
             </div>
@@ -40,9 +39,8 @@
                 <img class="second-slide" src="images/73510272.jpg" alt="Second slide">
                 <div class="container">
                     <div class="carousel-caption">
-                        <h1>Another example headline.</h1>
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                        <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+                        <h1>TECHNOLOGY & INOVATION</h1>
+                        <p>Turnkey solutions for any organisational problem.</p>
                     </div>
                 </div>
             </div>
@@ -50,9 +48,9 @@
                 <img class="third-slide" src="images/60793587.jpg" alt="Third slide">
                 <div class="container">
                     <div class="carousel-caption">
-                        <h1>One more for good measure.</h1>
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                        <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+                        <h1>ISO &amp; QUALITY
+                            SYSTEMS</h1>
+                        <p>We know quality is safety.</p>
                     </div>
                 </div>
             </div>
