--- a/technologyInovation.html
+++ b/technologyInovation.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/page.css">
 
     <meta charset="UTF-8">
-    <title>Test</title>
+    <title>DDNT</title>
 </head>
 <body>
 <div id="wrap">
