--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <img class="first-slide" src="images/53445969.jpg" alt="First slide">
                 <div class="container">
                     <div class="carousel-caption">
-                        <h1>LONG TERM GLOBAL PARTNERSHIPS.</h1>
+                        <h1>LONG TERM GLOBAL PARTNERSHIPS</h1>
                         <p>We believe in the power of data-driven decisions.</p>
                     </div>
                 </div>
