--- a/technologyInovation.html
+++ b/technologyInovation.html
@@ -25,8 +25,8 @@
                 <img src="images/73510272.jpg" alt="test" class="sectionPicture">
 
                 <div class="carousel-caption">
-                    <h1 class="text-center">TECHNOLOGY &amp; INOVATION</h1>
-                    <div>Turnkey solutions for any organisational problem</div>
+                    <h1 class="text-center">TECHNOLOGY &amp; INNOVATION</h1>
+                    <div>Turnkey solutions for any organisational problem.</div>
                 </div>
 
             </div>
