--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
 
-            <div class="col-sm-2 col-sm-offset-3">
+            <div class="col-sm-2 col-sm-offset-1">
             <ul class="list-unstyled">
                 <li><a href="./aboutDDNT.html">About DDNT</a></li>
                 <li><a href="./globalPartnerships.html">Global Partnerships</a></li>
@@ -15,11 +15,19 @@
                 <li><a href="./technologyInovation.html">Technology &amp; Inovation</a></li>
                 </ul>
             </div>
-            <div class="col-sm-2">
+            <div class="col-sm-3">
                <div class="blueBlock">
-                   <h2>Some Text</h2>
-                   <div>Some description here.</div>
+                   <h3>Address</h3>
+                   <div>L1, 71 York Street
+                       Sydney NSW 2000</div>
                </div>
+            </div>
+            <div class="col-sm-3">
+                <div class="blueBlock">
+                    <h3>Contact</h3>
+                    <div>+ 61 2 9292 5888<br/>
+                        info@ddconsultants.com</div>
+                </div>
             </div>
 
         </div>
