--- a/footer.html
+++ b/footer.html
@@ -26,7 +26,7 @@
                 <div class="blueBlock">
                     <h3>Contact</h3>
                     <div>+ 61 2 9292 5888<br/>
-                        info@ddconsultants.com</div>
+                       <span class="mail"> info@ddconsultants.com </span></div>
                 </div>
             </div>
 
