--- a/footer.html
+++ b/footer.html
@@ -22,7 +22,7 @@
                        Sydney NSW 2000</div>
                </div>
             </div>
-            <div class="col-sm-3">
+            <div class="col-sm-3 xs-top-buffer">
                 <div class="blueBlock">
                     <h3>Contact</h3>
                     <div>+ 61 2 9292 5888<br/>
