--- a/aboutDDNT.html
+++ b/aboutDDNT.html
@@ -26,7 +26,7 @@
                 <img src="images/IMG_1276.JPG" alt="test" class="sectionPicture">
 
                 <div class="carousel-caption">
-                    <h1 class="text-left">ABOUT DDNT</h1>
+                    <h1>ABOUT DDNT</h1>
                     <div>DDNT is ISO-certified and brings a deep understanding of process methodology to all of our work.</div>
                 </div>
 
@@ -55,7 +55,7 @@
 
             <div class="col-md-3 col-md-offset-1">
                 <img class="img-responsive img-rounded" src="images/quality.png"> <br/>
-                <p>Over almost 20 years of operation, DDNT has refined its methods to ensure the smooth delivery of work to the highest possible standard. We work in industries where quality means reduce both personal and business risk: our work underpins large infrastructure
+                <p>Over almost 20 years of operation, DDNT has refined its methods to ensure the smooth delivery of work to the highest possible standard. We work in industries where quality means reduction both personal and business risk: our work underpins large infrastructure
                     projects, crucial telecommunications links, and financial business processes. At DDNT, we know quality is safety.</p>
             </div>
             <div class="col-md-3 col-md-offset-1">
