--- a/globalPartnerships.html
+++ b/globalPartnerships.html
@@ -25,7 +25,7 @@
                 <img src="images/53445969.jpg" alt="test" class="sectionPicture">
 
                 <div class="carousel-caption">
-                    <h1 class="text-left">LONG TERM
+                    <h1>LONG TERM
                         GLOBAL
                         PARTNERSHIPS
                     </h1>
