--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <div id="navbarHolder"></div>
 
     <!--Carousel -->
+    <div class="container myFont">
+    <div class="row">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -39,7 +41,7 @@
                 <img class="second-slide" src="images/73510272.jpg" alt="Second slide">
                 <div class="container">
                     <div class="carousel-caption">
-                        <h1>TECHNOLOGY & INOVATION</h1>
+                        <h1>TECHNOLOGY & INNOVATION</h1>
                         <p>Turnkey solutions for any organisational problem.</p>
                     </div>
                 </div>
@@ -64,6 +66,8 @@
             <span class="sr-only">Next</span>
         </a>
     </div><!-- /.carousel -->
+    </div>
+    </div>
 </div>
 
 <div id="footerHolder"></div>
