--- a/navbar.html
+++ b/navbar.html
@@ -14,45 +14,20 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-right" id="navbarCollapse">
             <ul class="nav navbar-nav text-center">
-                <li id="testID" class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown">About DDNT <b class="fa fa-chevron-down"></b></a>
-                    <ul class="dropdown-menu bullet pull-center">
-                        <li><a href="./aboutDDNT.html">Information</a></li>
-                    </ul>
+                <li class="dropdown">
+                    <a href="./aboutDDNT.html">About DDNT <b class="fa fa-chevron-down"></b></a>
                 </li>
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown">Global Partnerships <b class="fa fa-chevron-down"></b></a>
-                    <ul class="dropdown-menu bullet pull-center">
-                        <li><a href="./globalPartnerships.html#infrastructure">Infrastructure</a></li>
-                        <li><a href="./globalPartnerships.html#finance">Finance</a></li>
-                        <li><a href="./globalPartnerships.html#utilities">Utilities</a></li>
-                    </ul>
+                    <a href="./globalPartnerships.html">Global Partnerships <b class="fa fa-chevron-down"></b></a>
                 </li>
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown">ISO &amp; Quality Systems <b class="fa fa-chevron-down"></b></a>
-                    <ul class="dropdown-menu bullet pull-center">
-                        <li><a href="./qualitySystems.html#experience">Experience</a></li>
-                        <li><a href="./qualitySystems.html#mcritical">Mission-Critical</a></li>
-                        <li><a href="./qualitySystems.html#compilance">Compilance</a></li>
-
-                    </ul>
+                    <a href="./qualitySystems.html">ISO &amp; Quality Systems <b class="fa fa-chevron-down"></b></a>
                 </li>
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown">Strategy &amp; Data <b class="fa fa-chevron-down"></b></a>
-                    <ul class="dropdown-menu bullet pull-center">
-                        <li><a href="strategyData.html#tda">Topological Data Analysis</a></li>
-                        <li><a href="strategyData.html#methodology">Advanced methodology</a></li>
-                        <li><a href="strategyData.html#dmaking">Data-driven decision making</a></li>
-                    </ul>
+                    <a href="./strategyData.html">Strategy &amp; Data <b class="fa fa-chevron-down"></b></a>
                 </li>
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown"> Technology &amp; Inovation <b class="fa fa-chevron-down"></b></a>
-                    <ul class="dropdown-menu bullet pull-center">
-                        <li><a href="technologyInovation.html#creating">Creating &amp; safeguarding your ip</a></li>
-                        <li><a href="technologyInovation.html#technoDev">Technological development</a></li>
-                        <li><a href="technologyInovation.html#research">Cutting-edge research</a></li>
-                        <li><a href="technologyInovation.html#safeguarding">Safeguarding ip</a></li>
-                    </ul>
+                    <a href="./technologyInovation.html"> Technology &amp; Inovation <b class="fa fa-chevron-down"></b></a>
                 </li>
 
 
