--- a/qualitySystems.html
+++ b/qualitySystems.html
@@ -26,7 +26,7 @@
                 <img src="images/60793587.jpg" alt="test" class="sectionPicture">
 
                 <div class="carousel-caption">
-                    <h1 class="text-center">ISO &amp; QUALITY <br/> SYSTEMS
+                    <h1>ISO &amp; QUALITY <br/> SYSTEMS
                     </h1>
                     <div>We know quality is safety.</div>
 
