--- a/strategyData.html
+++ b/strategyData.html
@@ -26,7 +26,7 @@
                 <img src="images/3934199.jpg" alt="test" class="sectionPicture">
 
                 <div class="carousel-caption">
-                    <h1 class="text-center">STRATEGY AND DATA</h1>
+                    <h1>STRATEGY AND DATA</h1>
                     <div>A better way to make decisions.</div>
                 </div>
 
