--- a/footer.html
+++ b/footer.html
@@ -37,7 +37,7 @@
                 <small>Copyright &copy; 2016 DDNT. All Rights Reserved.</small>
                 <a href="https://facebook.com"> <span class="fa social fa-facebook"></span> </a>
                 <a href="https://twitter.com">  <span class="fa social fa-twitter"></span> </a>
-                <a href="https://linkedin.com"> <span class="fa social fa-linkedin"></span> </a>
+                <a href="https://www.linkedin.com/company/ddnt-consultants"> <span class="fa social fa-linkedin"></span> </a>
             </div>
         </div>
     </div>
