--- a/technologyInovation.html
+++ b/technologyInovation.html
@@ -25,7 +25,7 @@
                 <img src="images/73510272.jpg" alt="test" class="sectionPicture">
 
                 <div class="carousel-caption">
-                    <h1 class="text-center">TECHNOLOGY &amp; INNOVATION</h1>
+                    <h1>TECHNOLOGY &amp; INNOVATION</h1>
                     <div>Turnkey solutions for any organisational problem.</div>
                 </div>
 
