changing the size of images

--- a/aboutDDNT.html
+++ b/aboutDDNT.html
@@ -62,7 +62,7 @@
                 <img class="img-responsive img-rounded" src="images/delivery.png"> <br/>
                 <p>In business, plans never survive first contact with a project.
                     Even when the unexpected occurs, DDNT ensures that project delivery always comes together.
-                    Projects DDNT is involved in have always delivered positive outcomes for our customers.</p>
+                    Projects that DDNT is involved in have always delivered positive outcomes for our customers.</p>
             </div>
         </div>
     </div>
