--- a/footer.html
+++ b/footer.html
@@ -19,7 +19,7 @@
                <div class="blueBlock">
                    <h3>Address</h3>
                    <div>L1, 71 York Street
-                       Sydney NSW 2000</div>
+                       [Sydney NSW 2000]</div>
                </div>
             </div>
             <div class="col-sm-3 xs-top-buffer">
