changing the font size of blue blocks

--- a/globalPartnerships.html
+++ b/globalPartnerships.html
@@ -62,13 +62,8 @@
 
         <div class="row top-buffer">
             <div class="col-sm-5 col-sm-offset-1 blueBlock lead">
-                DDNT Consultants provides quality systems management
-                and solutions to infrastructure companies with operations
-                ranging from transportation to telecommunications. We have
-                also consulted telecommunications companies on technology
-                and strategy. Our client list includes Transurban’s M7 and Lane
-                Cove Tunnel operations, British Telecom, QANTAS, and other
-                infrastructure providers.
+                DDNT’s portfolio of satisfied customers has grown
+                to encompass companies representing 5% of Australia’s GDP, and international companies in five countries.
             </div>
 
 
