--- a/qualitySystems.html
+++ b/qualitySystems.html
@@ -62,20 +62,11 @@
                     </div>
                 </div>
 
-                <div class="col-sm-12">
-                    <h2 id="compilance" class="text-center">COMPILANCE</h2>
-                    <div>
-                        DDNT is an ISO-certified company and is founded on robust
-                        processes that have underpinned our work for over a decade.
-                        Systems developed and maintained by DDNT have dramatically
-                        improved compliance and audit reliability for our customers.
-                    </div>
-                </div>
 
             </div>
             <div class="col-sm-4 col-sm-offset-1">
                 <br/>
-                <div class="largeBlueBlock">
+                <div class="blueBlock lead">
                     DDNT is an
                     ISO-certified
                     company and
@@ -84,6 +75,15 @@
                     of process
                     methodology to
                     all of our work.
+                </div>
+            </div>
+            <div class="col-sm-4 col-sm-offset-1">
+                <h2 id="compilance" class="text-center">COMPLIANCE</h2>
+                <div>
+                    DDNT is an ISO-certified company and is founded on robust
+                    processes that have underpinned our work for over a decade.
+                    Systems developed and maintained by DDNT have dramatically
+                    improved compliance and audit reliability for our customers.
                 </div>
             </div>
         </div>
