--- a/strategyData.html
+++ b/strategyData.html
@@ -63,21 +63,11 @@
                     </div>
                 </div>
 
-                <div class="col-sm-12">
-                    <h2 id="dmaking" class="text-center">DATA-DRIVEN DECISION MAKING</h2>
-                    <div>
-                        Combining advanced data analytics with our strategy consulting
-                        team enables forward-thinking decisions to be effectively taken
-                        as well. DDNT has effectively employed this integrated technique
-                        for analyses ranging from internal competitiveness assessments to
-                        large, public M & A deals.
-                    </div>
-                </div>
 
             </div>
             <div class="col-sm-4 col-sm-offset-1">
                 <br/>
-                <div class="largeBlueBlock">
+                <div class="blueBlock lead">
                     Our strategy and
                     data consulting
                     arm is focused
@@ -86,6 +76,17 @@
                     of available data
                     to empower
                     business decisions.
+                </div>
+            </div>
+
+            <div class="col-sm-4 col-sm-offset-1">
+                <h2 id="dmaking" class="text-center">DATA-DRIVEN DECISION MAKING</h2>
+                <div>
+                    Combining advanced data analytics with our strategy consulting
+                    team enables forward-thinking decisions to be effectively taken
+                    as well. DDNT has effectively employed this integrated technique
+                    for analyses ranging from internal competitiveness assessments to
+                    large, public M & A deals.
                 </div>
             </div>
         </div>
