--- a/aboutDDNT.html
+++ b/aboutDDNT.html
@@ -55,7 +55,7 @@
 
             <div class="col-md-3 col-md-offset-1">
                 <img class="img-responsive img-rounded" src="images/quality.png"> <br/>
-                <p>Over almost 20 years of operation, DDNT has refined its methods to ensure the smooth delivery of work to the highest possible standard. We work in industries where quality means reduction both personal and business risk: our work underpins large infrastructure
+                <p>Over almost 20 years of operation, DDNT has refined its methods to ensure the smooth delivery of work to the highest possible standard. We work in industries where quality means reduction of both personal and business risk: our work underpins large infrastructure
                     projects, crucial telecommunications links, and financial business processes. At DDNT, we know quality is safety.</p>
             </div>
             <div class="col-md-3 col-md-offset-1">
