blue blocks update

--- a/qualitySystems.html
+++ b/qualitySystems.html
@@ -64,7 +64,7 @@
 
 
             </div>
-            <div class="col-sm-4 col-sm-offset-1">
+            <div class="col-sm-5">
                 <br/>
                 <div class="blueBlock lead">
                     DDNT is an
@@ -77,7 +77,7 @@
                     all of our work.
                 </div>
             </div>
-            <div class="col-sm-4 col-sm-offset-1">
+            <div class="col-sm-5">
                 <h2 id="compilance" class="text-center">COMPLIANCE</h2>
                 <div>
                     DDNT is an ISO-certified company and is founded on robust
