--- a/strategyData.html
+++ b/strategyData.html
@@ -65,7 +65,7 @@
 
 
             </div>
-            <div class="col-sm-4 col-sm-offset-1">
+            <div class="col-sm-5">
                 <br/>
                 <div class="blueBlock lead">
                     Our strategy and
@@ -79,7 +79,7 @@
                 </div>
             </div>
 
-            <div class="col-sm-4 col-sm-offset-1">
+            <div class="col-sm-5">
                 <h2 id="dmaking" class="text-center">DATA-DRIVEN DECISION MAKING</h2>
                 <div>
                     Combining advanced data analytics with our strategy consulting
