Added shadows and changed the font on the splash images

--- a/aboutDDNT.html
+++ b/aboutDDNT.html
@@ -27,7 +27,7 @@
 
                 <div class="carousel-caption">
                     <h1>ABOUT DDNT</h1>
-                    <div>DDNT is ISO-certified and brings a deep understanding of process methodology to all of our work.</div>
+                    <h2>DDNT is ISO-certified and brings a deep understanding of process methodology to all of our work.</h2>
                 </div>
 
             </div>
