--- a/globalPartnerships.html
+++ b/globalPartnerships.html
@@ -29,8 +29,8 @@
                         GLOBAL
                         PARTNERSHIPS
                     </h1>
-                    <div>We believe in the power
-                        of data-driven decisions.</div>
+                    <h2>We believe in the power
+                        of data-driven decisions.</h2>
 
                 </div>
 
