--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="container">
                     <div class="carousel-caption">
                         <h1>LONG TERM GLOBAL PARTNERSHIPS</h1>
-                        <p>We believe in the power of data-driven decisions.</p>
+                        <h2>We believe in the power of data-driven decisions.</h2>
                     </div>
                 </div>
             </div>
@@ -42,7 +42,7 @@
                 <div class="container">
                     <div class="carousel-caption">
                         <h1>TECHNOLOGY & INNOVATION</h1>
-                        <p>Turnkey solutions for any organisational problem.</p>
+                        <h2>Turnkey solutions for any organisational problem.</h2>
                     </div>
                 </div>
             </div>
@@ -52,7 +52,7 @@
                     <div class="carousel-caption">
                         <h1>ISO &amp; QUALITY
                             SYSTEMS</h1>
-                        <p>We know quality is safety.</p>
+                        <h2>We know quality is safety.</h2>
                     </div>
                 </div>
             </div>
