--- a/qualitySystems.html
+++ b/qualitySystems.html
@@ -28,7 +28,7 @@
                 <div class="carousel-caption">
                     <h1>ISO &amp; QUALITY <br/> SYSTEMS
                     </h1>
-                    <div>We know quality is safety.</div>
+                    <h2>We know quality is safety.</h2>
 
                 </div>
 
