--- a/strategyData.html
+++ b/strategyData.html
@@ -27,7 +27,7 @@
 
                 <div class="carousel-caption">
                     <h1>STRATEGY AND DATA</h1>
-                    <div>A better way to make decisions.</div>
+                    <h2>A better way to make decisions.</h2>
                 </div>
 
             </div>
