--- a/technologyInovation.html
+++ b/technologyInovation.html
@@ -26,7 +26,7 @@
 
                 <div class="carousel-caption">
                     <h1>TECHNOLOGY &amp; INNOVATION</h1>
-                    <div>Turnkey solutions for any organisational problem.</div>
+                    <h2>Turnkey solutions for any organisational problem.</h2>
                 </div>
 
             </div>
