resized the spalsh images

--- a/aboutDDNT.html
+++ b/aboutDDNT.html
@@ -23,7 +23,7 @@
 
             <div class="col-md-12 ">
 
-                <img src="images/IMG_1276.JPG" alt="test" class="sectionPicture">
+                <img src="resizedSplashImages/aboutDDNT.jpg" alt="test" class="sectionPicture">
 
                 <div class="carousel-caption">
                     <h1>ABOUT DDNT</h1>
