--- a/globalPartnerships.html
+++ b/globalPartnerships.html
@@ -22,7 +22,7 @@
 
             <div class="col-md-12 ">
 
-                <img src="images/53445969.jpg" alt="test" class="sectionPicture">
+                <img src="resizedSplashImages/globalPartnerships.jpg" alt="test" class="sectionPicture">
 
                 <div class="carousel-caption">
                     <h1>LONG TERM
