--- a/qualitySystems.html
+++ b/qualitySystems.html
@@ -23,7 +23,7 @@
 
             <div class="col-md-12 ">
 
-                <img src="images/60793587.jpg" alt="test" class="sectionPicture">
+                <img src="resizedSplashImages/qualitySystems.jpg" alt="test" class="sectionPicture">
 
                 <div class="carousel-caption">
                     <h1>ISO &amp; QUALITY <br/> SYSTEMS
