--- a/strategyData.html
+++ b/strategyData.html
@@ -23,7 +23,7 @@
 
             <div class="col-md-12 ">
 
-                <img src="images/3934199.jpg" alt="test" class="sectionPicture">
+                <img src="resizedSplashImages/strategyData.jpg" alt="test" class="sectionPicture">
 
                 <div class="carousel-caption">
                     <h1>STRATEGY AND DATA</h1>
