--- a/technologyInovation.html
+++ b/technologyInovation.html
@@ -22,7 +22,7 @@
 
             <div class="col-md-12 ">
 
-                <img src="images/73510272.jpg" alt="test" class="sectionPicture">
+                <img src="resizedSplashImages/technologyInnovation.jpg" alt="test" class="sectionPicture">
 
                 <div class="carousel-caption">
                     <h1>TECHNOLOGY &amp; INNOVATION</h1>
