--- a/navbar.html
+++ b/navbar.html
@@ -15,19 +15,19 @@
         <div class="collapse navbar-collapse navbar-right" id="navbarCollapse">
             <ul class="nav navbar-nav text-center">
                 <li class="dropdown">
-                    <a href="./aboutDDNT.html">About DDNT <b class="fa fa-chevron-down"></b></a>
+                    <a href="./aboutDDNT.html">About DDNT </a>
                 </li>
                 <li class="dropdown">
-                    <a href="./globalPartnerships.html">Global Partnerships <b class="fa fa-chevron-down"></b></a>
+                    <a href="./globalPartnerships.html">Global Partnerships</a>
                 </li>
                 <li class="dropdown">
-                    <a href="./qualitySystems.html">ISO &amp; Quality Systems <b class="fa fa-chevron-down"></b></a>
+                    <a href="./qualitySystems.html">ISO &amp; Quality Systems</a>
                 </li>
                 <li class="dropdown">
-                    <a href="./strategyData.html">Strategy &amp; Data <b class="fa fa-chevron-down"></b></a>
+                    <a href="./strategyData.html">Strategy &amp; Data</a>
                 </li>
                 <li class="dropdown">
-                    <a href="./technologyInovation.html"> Technology &amp; Inovation <b class="fa fa-chevron-down"></b></a>
+                    <a href="./technologyInovation.html"> Technology &amp; Inovation </a>
                 </li>
 
 
