created new page

--- a/globalPartnerships.html
+++ b/globalPartnerships.html
@@ -90,6 +90,24 @@
                     management systems to ensure post-audit compliance.
                 </div>
             </div>
+
+            <div class=" col-sm-5">
+                <h2 class="text-center" id="retail">RETAIL</h2>
+                <div>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="row top-buffer">
+            <div class="col-sm-offset-1 col-sm-5">
+                <h2 class="text-center" id="privateEquity">PRIVATE EQUITY</h2>
+                <div>
+
+                </div>
+            </div>
+
+        </div>
         </div>
     </div>
 </div>
