--- a/navbar.html
+++ b/navbar.html
@@ -27,7 +27,10 @@
                     <a href="./strategyData.html">Strategy &amp; Data</a>
                 </li>
                 <li class="dropdown">
-                    <a href="./technologyInovation.html"> Technology &amp; Inovation </a>
+                    <a href="./technologyInovation.html"> Technology &amp; Innovation </a>
+                </li>
+                <li class="dropdown">
+                    <a href="./InnovativeSolutions.html"> Innovative Solutions</a>
                 </li>
 
 
